--- a/exercises/html/Markdown to html/style.css
+++ b/exercises/html/Markdown to html/style.css
@@ -35,3 +35,16 @@ ul.b{
 .croocked {
     font-style: italic;
 }
+@keyframes myanimation {
+    from {
+        left: 0px;
+    }
+    to {
+        left:200px;
+    }
+}
+img {
+    padding: 20px;
+    position: relative;
+    animation: myanimation 5s;
+}
