--- a/exercises/html/Markdown to html/style.css
+++ b/exercises/html/Markdown to html/style.css
@@ -40,11 +40,12 @@ ul.b{
         left: 0px;
     }
     to {
-        left:200px;
+        left:600px;
     }
 }
 img {
     padding: 20px;
     position: relative;
-    animation: myanimation 5s;
+    animation: myanimation 7s infinite;
+
 }
