--- a/exercises/2.css/3.grid-chessboard/Resources/Style.css
+++ b/exercises/2.css/3.grid-chessboard/Resources/Style.css
@@ -26,6 +26,8 @@ body {
     grid-gap: 0;
     grid-template-columns: [a] 80px [B] 80px [c] 80px [d] 80px [e] 80px [f] 80px [g] 80px [h] 80px;
     grid-template-rows: repeat(8, 80px);
+    justify-items: center;
+    align-items: center;
 
     grid-template-areas:
     "A1 B1 C1 D1 E1 D1 E1 F1"
@@ -134,7 +136,7 @@ body {
     display: grid;
     align-items: center;
     justify-content: center;
-    grid-area: A7;
+
 }
 .wpawn2 {
     display: grid;
