--- a/exercises/2.css/3.grid-chessboard/Resources/Style.css
+++ b/exercises/2.css/3.grid-chessboard/Resources/Style.css
@@ -24,20 +24,12 @@ body {
     grid-row: 2;
     display: grid;
     grid-gap: 0;
-    grid-template-columns: [a] 80px [B] 80px [c] 80px [d] 80px [e] 80px [f] 80px [g] 80px [h] 80px;
+    grid-template-columns: repeat(8, 80px);
     grid-template-rows: repeat(8, 80px);
     justify-items: center;
     align-items: center;
 
-    grid-template-areas:
-    "A1 B1 C1 D1 E1 D1 E1 F1"
-    "A2 B2 C2 D2 E2 D2 E2 F2"
-    "A3 B3 C3 D3 E3 D3 E3 F3"
-    "A4 B4 C4 D4 E4 D4 E4 F4"
-    "A5 B5 C5 D5 E5 D5 E5 F5"
-    "A6 B6 C6 D6 E6 D6 E6 F6"
-    "A7 B7 C7 D7 E7 D7 E7 F7"
-    "A8 B8 C8 D8 E8 D8 E8 F8"
+
 }
 .wrapper-inner{
     display: grid;
@@ -96,82 +88,98 @@ body {
     display: grid;
     align-items: center;
     justify-content: center;
+    grid-area: 8 / 1;
 }
 .wroock2 {
     display: grid;
     align-items: center;
     justify-content: center;
+    grid-area: 8 / 2;
 }
 .wknight1 {
     display: grid;
     align-items: center;
     justify-content: center;
+    grid-area: 8 / 3;
 }
 .wknight2 {
     display: grid;
     align-items: center;
     justify-content: center;
+    grid-area: 8 / 4;
 }
 .wbishop1 {
     display: grid;
     align-items: center;
     justify-content: center;
+    grid-area: 8 / 5;
 }
 .wbishop2 {
     display: grid;
     align-items: center;
     justify-content: center;
+    grid-area: 8 / 6;
 }
 .wqueen {
     display: grid;
     align-items: center;
     justify-content: center;
+    grid-area: 8 / 7;
 }
 .wking {
     display: grid;
     align-items: center;
     justify-content: center;
+    grid-area: 8 / 8;
 }
 .wpawn1 {
     display: grid;
     align-items: center;
     justify-content: center;
+    grid-area: 7 / 1;
 
 }
 .wpawn2 {
     display: grid;
     align-items: center;
     justify-content: center;
+    grid-area: 7 / 2;
 }
 .wpawn3 {
     display: grid;
     align-items: center;
     justify-content: center;
+    grid-area: 7 / 3;
 }
 .wpawn4 {
     display: grid;
     align-items: center;
     justify-content: center;
+    grid-area: 7 / 4;
 }
 .wpawn5 {
     display: grid;
     align-items: center;
     justify-content: center;
+    grid-area: 7 / 5;
 }
 .wpawn6 {
     display: grid;
     align-items: center;
     justify-content: center;
+    grid-area: 7 / 6;
 }
 .wpawn7 {
     display: grid;
     align-items: center;
     justify-content: center;
+    grid-area: 7 / 7;
 }
 .wpawn8 {
     display: grid;
     align-items: center;
     justify-content: center;
+    grid-area: 7 / 8;
 }
 .bbroock1 {
     display: grid;
