added sass project

--- a/exercises/3.sass/Group product/resources/scss/_components.scss
+++ b/exercises/3.sass/Group product/resources/scss/_components.scss
@@ -1,3 +1,4 @@
+/* Kris section */
 @import "_variables";
 
 .visitorcontainer{
@@ -83,5 +84,3 @@ visitors img{
     background-color: darken($lightbluebg, 10%);
   }
 }
-
-
