--- a/exercises/3.sass/3.multi-pager/Resources/game/res/css/style.css
+++ b/exercises/3.sass/3.multi-pager/Resources/game/res/css/style.css
@@ -1,277 +1,17 @@
 @charset "UTF-8";
-body {
-  background-color: darkblue;
-}
-
-.nickcontainer div,
-a {
-  color: darkgrey;
-}
-
-a {
-  padding: 10px;
-}
-
-.websitecontainer {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto auto auto;
-}
-
-.storenavbar {
-  grid-row-start: 1;
-  grid-row-end: 2;
-  grid-column-start: 1;
-  grid-column-end: 2;
-  display: flex;
-  border-bottom: 3px solid darkgrey;
-}
-
-.storenavbar1 {
-  display: flex;
-  justify-content: flex-start;
-  width: 100%;
-}
-
-.storenavbar2 {
-  display: flex;
-  width: 100%;
-  justify-content: flex-end;
-}
-
-li {
-  list-style-type: none;
-}
-
-.storeoptions {
-  grid-row-start: 2;
-  grid-row-end: 3;
-  grid-column-start: 1;
-  grid-column-end: 2;
-  display: flex;
-  padding-bottom: 30px;
-}
-.storeoptions * {
-  padding: 10px;
-}
-
-.storeoptions2 {
-  display: flex;
-  width: 100%;
-  justify-content: flex-end;
-}
-
-.leftalign {
-  float: left;
-}
-
-.rightalign {
-  float: right;
-}
-
-.featuredcontent {
-  grid-row-start: 3;
-  grid-row-end: 4;
-  grid-column-start: 1;
-  grid-column-end: 2;
-  display: flex;
-  padding-bottom: 40px;
-}
-
-.bigimage {
-  height: 360px;
-  width: 500px;
-  padding: 10px;
-}
-
-.smallimage {
-  height: 180px;
-  width: 180px;
-  padding: 10px;
-}
-
-.subfeaturedcontent {
-  justify-self: flex-end;
-  display: grid;
-  padding-left: 80px;
-  grid-template-areas: "g1 g2" "g3 g4";
-}
-
-.topsellers {
-  grid-row-start: 4;
-  grid-row-end: 5;
-  grid-column-start: 1;
-  grid-column-end: 2;
-  display: flex;
-}
-
-.globalfont {
-  font-size: 15px;
-}
-
-.socialbar {
-  grid-row-start: 1;
-  grid-row-end: 5;
-  grid-column-start: 2;
-  grid-column-end: 3;
-  display: flex;
-  flex-direction: column;
-  border-left: 3px solid darkgrey;
-  background-color: darkred;
-}
-
-.socialbarprofile {
-  display: flex;
-  flex-direction: row;
-  height: 40px;
-  width: 100%;
-  overflow: hidden;
-  border-bottom: 3px solid darkgrey;
-}
-
-.socialbarcolumn {
-  display: flex;
-  flex-direction: column;
-  padding-left: 10px;
-}
-
-.stfriendlist {
-  display: flex;
-  flex-direction: column;
-}
-
-.socialbottom {
-  display: flex;
-}
-
-.rowclass {
-  display: flex;
-  flex-direction: row;
-  height: 40px;
-  width: 100%;
-  overflow: hidden;
-}
-.rowclass img {
-  height: 20px;
-  width: 20px;
-}
-
-.columnclass {
-  display: flex;
-  flex-direction: column;
-  background-color: #580000;
-}
-
-body {
-  color: gray;
-  font-weight: bold;
-}
-
-.nickcontainer {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto auto auto;
-}
-
-.pagecontainer {
-  width: 980px;
-  height: 600px;
-  background-image: linear-gradient(to left, transparent, #010914), url(tenmo.jpg);
-  background-size: cover;
-  grid-column: 1;
-  grid-row: 2;
-}
-
-.adc {
-  width: 45px;
-  height: 45px;
-  margin-left: 35px;
-  margin-top: 15px;
-}
-
-.part1 {
-  display: flex;
-  flex-flow: row;
-}
-
-.a h1 {
-  margin: 15px 0px 0px 20px;
-  font-size: 25px;
-  color: #E3DBD3;
-}
-.a p {
-  margin: 0 0 0 20px;
-  color: gray;
-}
-
-.part2 {
-  display: flex;
-  flex-flow: row;
-  font-size: 12px;
-  margin-left: 35px;
-  margin-top: 5px;
-}
-.part2 p {
-  margin-right: 20px;
-}
-.part2 p:hover {
-  color: #E3DBD3;
-}
-
-.part3 {
-  margin-left: 35px;
-  margin-top: 40px;
-  font-size: 12px;
-}
-.part3 p {
-  margin: 0px 0px;
-}
-
-.part4 {
-  margin-left: 35px;
-  font-size: 12px;
-}
-
-.bottext {
-  margin-left: 35px;
-  margin-top: 40px;
-  width: 260px;
-  font-size: 11px;
-  font-weight: normal;
-  color: #E3DBD3;
-}
-
-.buttons {
-  margin-top: 60px;
-  margin-left: 35px;
-}
-.buttons button {
-  background: #232424;
-  color: #c9aa71;
-  font-weight: bold;
-  padding: 5px 20px;
-  border-color: #937341;
-  margin-right: 25px;
-}
-
-.stats {
-  position: absolute;
-  left: 240px;
-  top: 135px;
-}
-
-.b {
-  color: #E3DBD3;
-}
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.gamebody {
-  background-image: url("game/res/images/backgroundlol.jpg");
+img {
+  width: 100%;
+  height: auto;
+}
+
+body {
+  background-image: url("../images/backgroundlol.jpg");
   color: #b2ddc6;
 }
 
@@ -672,4 +412,4 @@ header {
   content: "";
 }
 
-/*# sourceMappingURL=output.css.map */
+/*# sourceMappingURL=style.css.map */
